# gnn-fake-news-pj

./: .gitignore  README.md  REPRODUCING.md  graph_info.txt  main.py  pyproject.toml  requirements.txt
code/: __init__.py  bigcn.py  data_loader.py  eval_helper.py  gcnfn.py  gnn.py  gnncl.py  run
environment/: Dockerfile  postInstall
log/: gnncl  original_gcnfn  upfd_bigcn  upfd_gat  upfd_gcn  upfd_gcnfn  upfd_sage
metadata/: metadata.yml
references/: ref.md
utils/: reprocess_all_features.py
visualization/: README.md  __init__.py  depth_distribution.py  graph_visualizer.py  node_distribution.py  nonroot_centralization.py  utils.py
