[project]
name = "pj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # PyTorch core (must be installed first)
    "torch>=2.0.0",
    # PyTorch Geometric and extensions (require torch to be installed first)
    "torch-geometric>=2.0.0",
    "torch-sparse>=0.6.0",
    "torch-scatter>=2.1.0",
    "torch-cluster>=1.6.0",
    "torch-spline-conv>=1.2.0",
    # Visualization
    "networkx>=3.0.0",
    "matplotlib>=3.5.0",
    # Data processing
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.22.0",
    # Utilities
    "tqdm>=4.30.0",
    "keras>=2.2.4",
]

[tool.setuptools]
packages = ["code", "visualization", "utils"]
